# math

./: .gitignore  1.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Fraction2.h  FractionTest.cpp  HelloWorld.java  LICENSE  LearnWindowsAPI.cpp  Matrix.cpp  Matrix.h  MatrixMain.cpp  class.csv  class_member.cc  job.cpp  job.md  lambda表达式.html  lambda表达式.md  learn _random.cc  learnUse_IO.cc  learn_algorithm.cpp  learn_enum.cc  learn_ifstream.cpp  learn_ptr.cpp  learn_random.cpp  learn_template_for_class.cc  learn_template_for_function.cc  main.cpp  makefile  n-Determinant.cpp  readme.md  test.c  test.cpp  test.vim  test_rightval.cpp  testengine.cpp  typeTest.c  关联容器.md  容器适配器.md  (+7 more)
ModernRomanNumerals/: CMakeLists.txt  ModernRomanNumerals.c  ModernRomanNumerals2.c
cmake_module/: ParseArguments.cmake  Router.cmake  router.cmake
csv/: name.cpp  name.h  usename.cpp
curve/: Ellipse.h
determinant/: Determinant2_3.c  n-DeterminantUseCpp.cpp
docs/: AT&T.md  c++模板匹配规则.md  combinatorics.md  latex.md  note.md  模板约束.md  欧拉公式.md  矩阵.md  矩阵与行列式.md  行列式.md
docs/studynote/: bitset.md  tuple.md  可重载的运算符.md  容器适配器.md  标准库函数对象.md  标准库函数类型.md  标准类型转换模板.md  迭代器妙用.md  迭代器算法参数列表模板（建议）.md  随机数.md  顺序容器string.md
java/: HelloWorld.java
learnForC/: CMakeLists.txt
learnForCpp/: learn_algorithm.cpp  learn_class_pointer.cpp  learn_random.cpp  learn_template_for_function.cpp  reverse_iterator_practice.cpp
learntest/: learn_map.cpp  learn_union.cc  try_catch.cc
matrix/: CMakeLists.txt  Determinant2_3.c  InverseOrderNumber.cpp  Line.cpp  M_Base.cpp  M_Base.h  Matrix.cpp  Matrix.h  MatrixMain.cpp  MatrixTest.cpp  Point.cpp  testMatrix.cpp  testPoint.cpp  useM_Base.cpp
matrix/c++20/: DeterminantTest.cpp
matrixUtils/: CMakeLists.txt  InverseOrderNumber.cpp
planeGeometry/: CMakeLists.txt  Ellipse.cpp  Line.h  testLine.cpp  testPoint.cpp
src/RomanNumerals/: CMakeLists.txt  RomanNumerals.c  RomanNumerals.h
src/combinatorics/: CMakeLists.txt  combinatorics.c  combinatorics.h
src/determinant/: CMakeLists.txt  determinant.c  determinant.h
src/gcd/: CMakeLists.txt  gcd.c  gcd.h
src/kmp/: CMakeLists.txt  KMP.c  kmp.h  test_kmp.c
src/linear/: CMakeLists.txt  array.hpp  main.cpp  matrix.hpp
src/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.hpp  MatrixMain.cpp
src/matrix/c++20/: Determinant.cpp  Determinant.h
src/planeGeometry/: CMakeLists.txt  Circle.hpp  ConicBase.hpp  Ellipse.cpp  Ellipse.h  Ellipse.hpp  Hyperbola.hpp  Line.cpp  Line.h  Line.hpp  Parabola.hpp  Point.cpp  Point.h  Point.hpp  conic_factory.hpp  conic_intersect.hpp  conic_tags.hpp  conic_traits.hpp  testEllipse.cc  testPoint.cpp  transform2D.hpp
src/prime/: CMakeLists.txt  prime.c  prime.h
src/strings/: CMakeLists.txt  Sunday.c  kmp.c  kmp.h  kmp2.c  kmp2.h  next1.c  sunday.h  test.c  test_Sunday.c
src/tensor/: CMakeLists.txt  tensor.hpp
strings/: CMakeLists.txt  KMP.c  KMP2.c  Sunday.c  next2.c  test.cpp
studynote/: 标准库type_traits.md  正则表达式.md  流的常用操作.md  迭代器妙用.md  链表成员算法.md  顺序容器笔记.md
test/: CMakeLists.txt  Fraction.h  Print_price_calculation.h  init_list.cc  iterator.cpp  try_catch.cc
tests/: 10_4_2_exercise.cpp  CMakeLists.txt  容器.cpp
tests/ModernRomanNumerals/: ModernRomanNumerals.c  ModernRomanNumerals2.c
tests/boost/: CMakeLists.txt  Fraction.hpp  FractionTest.cpp
tests/c++20/: CMakeLists.txt  Fraction.hpp  FractionTest.cpp
tests/csv/: CMakeLists.txt  name.cpp  name.csv  name.h  usename.cpp
tests/determinant/: CMakeLists.txt  Determinant2_3.c  determinant_2_3.c  determinant_n.c  n-DeterminantUseC.c  n-DeterminantUseCpp.cpp
tests/gcd/: CMakeLists.txt
tests/interactive/: CMakeLists.txt  combinations.c  nth_prime.c  prime_check.c
tests/learnForC/: CMakeLists.txt  LearnWindowsAPI.c
tests/learnForCpp/: CMakeLists.txt  container.cpp  init_list.cpp  iterator.cpp  learnUse_IO.cpp  learn_algorithm.cpp  learn_class_pointer.cpp  learn_enum.cpp  learn_ifstream.cpp  learn_map.cpp  learn_ptr.cpp  learn_random.cpp  learn_set.cpp  learn_template_for_class.cpp  learn_template_for_function.cpp  learn_union.cpp  learn_use_for_csvFile.cpp  reverse_iterator_practice.cpp  template_params.hpp  template_params_demo.cpp  try_catch.cpp
tests/lib/: CMakeLists.txt
tests/logic_math/: CMakeLists.txt  logic_equivalence.c  monkey_peach_problem.c  perfect_square_puzzle.c  truth_table.c
tests/long_running/: CMakeLists.txt  taylor_series_pi.c
tests/planeGeometry/: CMakeLists.txt  dbg1.cpp  debugIntersect.cpp  debugIntersect2.cpp  debugParabola.cpp  debug_parabola.cpp  testCircle.cpp  testConicFactory.cpp  testConicIntersect.cpp  testConicTraits.cpp  testEllipse.cpp  testHyperbola.cpp  testLine.cpp  testParabola.cpp  testPoint.cpp  testTransform2D.cpp
tests/roman/: CMakeLists.txt  main.c
tests/strings/: CMakeLists.txt  strings_test.c
tests/tensor/: CMakeLists.txt  sfinae_check.cmake  test_tensor.cpp  test_tensor_sfinae_negative.cpp
tests/test/: CMakeLists.txt  Print_price_calculation.c  Print_price_calculation.h  typeTest.c
tests/with_input/: CMakeLists.txt  gcd_loop.c  gcd_recursive.c  gcd_subtraction.c  prime_range.c  prime_range_finder.c
圆锥曲线/: Ellipse.cpp
字符串匹配/: Sunday.c  next.c  next1.c
学习用例/: try_catch.cc
矩阵与行列式/: 2-3Determinant.c  Line.h  MulOfMatrix.cpp  Point.h  n-Determinant.c  testLine.cc
罗马数字/: ModernRomanNumerals2.c
