file(GLOB SRCLIST *.c *.cpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
block(SCOPE_FOR POLICIES)
    cmake_policy(SET CMP0167 NEW)
    find_package(Boost REQUIRED COMPONENTS core)
endblock()
foreach(ITEM ${SRCLIST})
    cmake_path(GET ITEM STEM CURFILENAME)
    add_executable(${CURFILENAME} ${ITEM})
    target_link_libraries(${CURFILENAME} PRIVATE Boost::core)
endforeach(ITEM)